<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/mainmenuRoot">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/rlRoot">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/rlMenuImage" android:layout_above="@+id/rlMainmenu">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ivMenuImage"
                    android:src="@raw/ictusicon" android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:id="@+id/rlMainmenu"
                android:layout_alignParentBottom="true">
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/newLoop"
                    android:id="@+id/btnNewLoop" android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true" android:onClick="newLoop"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/saveLoop"
                    android:id="@+id/btnSaveLoop" android:layout_alignLeft="@+id/btnNewLoop"
                    android:layout_below="@+id/btnNewLoop" android:onClick="saveLoop"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/loadLoop"
                    android:id="@+id/btnLoadLoop" android:layout_below="@+id/btnSaveLoop"
                    android:layout_alignLeft="@+id/btnSaveLoop" android:onClick="loadLoop"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/help"
                    android:id="@+id/btnHelp" android:layout_alignLeft="@+id/btnNewLoop"
                    android:layout_below="@+id/btnLoadLoop" android:onClick="help"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/exit"
                    android:id="@+id/btnExit"
                    android:layout_alignLeft="@+id/btnNewLoop" android:layout_below="@+id/btnHelp"
                    android:onClick="exitIctus"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>

