<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/subdivisionRoot">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/rlRoot">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rlBackTitle">
            <Button
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:text="@string/doneButton"
                    android:id="@+id/btnSubDone"
                    android:layout_alignParentLeft="true" android:layout_marginLeft="10dp"
                    android:layout_alignParentTop="true" android:layout_marginTop="10dp" android:onClick="doneSubdivision"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subdivisionTitle"
                    android:id="@+id/txtSubdivisionTitle"
                    android:textIsSelectable="true" android:textSize="26sp"
                    android:layout_marginTop="15dp" android:layout_toRightOf="@+id/btnSubDone"
                    android:layout_marginLeft="35dp" android:textStyle="italic"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_below="@+id/rlBackTitle"
                android:id="@+id/rlSelectBeat">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beatNumber"
                    android:id="@+id/txtBeatNum" android:layout_alignParentLeft="true" android:layout_marginLeft="5dp"
                    android:layout_alignParentTop="true" android:layout_marginTop="15dp" android:textSize="20sp"/>
            <Spinner
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:id="@+id/spnrSubNumBeat" android:layout_toRightOf="@+id/txtBeatNum"
                    android:layout_alignParentTop="true" android:layout_marginTop="5dp"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numSubdivisions"
                    android:id="@+id/txtSubdivNum" android:layout_toRightOf="@+id/spnrSubNumBeat"
                    android:layout_alignTop="@+id/txtBeatNum" android:textSize="20sp" android:layout_marginLeft="5dp"/>
            <Spinner
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:id="@+id/spnrSubNumSubdiv" android:layout_toRightOf="@+id/txtSubdivNum"
                    android:layout_alignTop="@+id/spnrSubNumBeat"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/rlSubdivPattern"
                android:layout_below="@+id/rlSelectBeat">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/llSubdivPattern"
                    android:layout_centerInParent="true">
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>